screen overlaping fix for splash screen

--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -42,6 +42,9 @@ section {
 		@include breakpoint($large) {
 			flex-flow: row;
 			justify-content: center;
+		}
+
+		@include breakpoint($xxlarge) {
 			padding-top: 200px;
 		}
 	}
